css bulma transition

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Concert Scout</title>
 </head>
-<body class="d-flex text-center">
-    <container class="d-flex-block flex-column m-2 col-6">
-        <h1 class="p-2 m-2 mb-5">Concert Scout</h1>
+<body class="columns">
+    <container class="column">
+        <h1 class="">Concert Scout</h1>
         <div>
         <!--input-->
-        <input class="p-2 m-2 rounded text-center form-control" placeholder="placeholder"></input>
+        <input class="" placeholder="placeholder"></input>
         <!--button-->
-        <button class="p-2 m-2 rounded btn-block">placeholder</button>
+        <button class="button">placeholder</button>
         </div>
         <div>
             <!--map view of venue selected-->
         </div>
     </container>
-    <container class="bg-secondary mt-2 rounded col-6">
+    <container class="column">
         <p>List of Events Based on User Input</p>
         <!-- <div>
             List of Events
