adding first api

--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
             List of Events
         </div> -->
     </container>
+
+    <script src="./assets/js/script.js"> </script>
 </body>
 </html>
