adding first api - working!

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             List of Events
         </div> -->
     </container>
-
+    <script src="./assets/js/gitconfig.js"></script>
     <script src="./assets/js/script.js"> </script>
 </body>
 </html>
