added api call that grabs the name of venue by id

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <container class="column is-half pb-auto p-4 m-2 has-background-grey-light">
         
             <p class="block has-text-centered is-size-4">List of Events Based on User Input</p>
-            <!-- <div>
+            <div id="listOfEvents">
                 List of Events
-            </div> -->
+            </div>
         
     </container>
     <script src="./assets/js/gitconfig.js"></script>
