--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h1 class="column block is-size-1">Concert Scout</h1>
             <div class="block">
             <!--input-->
-            <input class="column is-full block has-text-centered is-size-4" type="search" placeholder="placeholder"></input>
+            <input id="userInput" class="column is-full block has-text-centered is-size-4" type="search" placeholder="placeholder"></input>
             <!--button-->
-            <input class="column block is-full is-dark button" type="submit" value="Submit"></input>
+            <input id="button" class="column block is-full is-dark button" type="submit" value="Submit"></input>
             </div>
             <div class="column block has-background-grey-light is-full pb-auto">
                 <!--map view of venue selected-->
