--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <!--button-->
             <input id="button" class="column block is-full is-link is-size-5 button" type="submit" value="Submit"></input>
             </div>
-            <div class="column block has-background-grey-light is-full pb-auto">
+            <div class="column block has-background-grey-light is-full pb-auto" id="response">
                 <!--map view of venue selected-->
-                placeholder
+                Get your tickets here!
+                <hr>
             </div>
         
     </container>
@@ -45,6 +46,6 @@
         
     </container>
     <script src="./assets/js/gitconfig.js"></script>
-    <script src="./assets/js/script.js"> </script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
