Added Bulma's modal functionality to each section that would previously call an alert

--- a/index.html
+++ b/index.html
@@ -43,8 +43,17 @@
                       </div>
                   </div>
                 </div>
-        
+
     </container>
+
+    <!-- Modal -->
+<div class="modal">
+  <div class="modal-background"></div>
+  <div class="modal-content has-background-white py-5 px-5">
+    <h3 id="modalText" class="title mb-6"></h3>
+  </div>
+</div>
+
     <script src="./assets/js/gitconfig.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
